# video-orchestrator

./: .env.example  .eslintrc.cjs  .gitignore  AB_TESTING_FEATURE.md  ACTUAL SITUATION.md  ADVANCED_FEATURES.md  AGENTS.md  AI_AUTO_PILOT_IMPLEMENTATION.md  AI_CONTENT_DIRECTOR_COMPLETE.md  AI_FEATURES_SUMMARY.md  AI_SMART_FEATURES_PROPOSAL.md  ANALYTICS_DASHBOARD_FEATURE.md  API.md  ARCHITECTURE.md  ARCHITECTURE_BEST_PRACTICES.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_REFACTORING_SUMMARY.md  ARCHITECTURE_UML.md  AUDIT.md  AUDIT_FIXES_COMPLETE.md  AUDIT_IMPLEMENTATION_STATUS.md  AUTO_PILOT_TEST_RESULTS.md  BACKEND_CONNECTION_IMPLEMENTATION.md  BACKEND_PORT_CONFLICT_FIX.md  BACKEND_SCHEMA_INTEGRATION_COMPLETE.md  BRAND_KIT_SYSTEM.md  BUG_BLOCARE_BACKGROUND_TAB.md  BUG_FIX_NAVIGARE_TABURI.md  BUG_FIX_UI_TRUNCHIAT_ZOOM.md  BUILD_INSTRUCTIONS.md  BUUUGURI.md  CAPTION_STYLING_ENGINE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  COMPETITIVE_FEATURES_IMPLEMENTATION_COMPLETE.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTENT_ANALYZER_FEATURE.md  (+123 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
TESTE/: Claude.md  test.md  test_progress_report.md
Video Orchestrator Tauri+Svelte app/video-orchestrator/apps/ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/ui/src-tauri/.cargo/: config.toml
apps/ui/src-tauri/icons/: icon.icns
apps/ui/src-tauri/src/: main.rs
assets/: .env.example.md  10 Checklist.md  11 Fluxul grafic.md  12 VIDEO ORCHESTRATOR – RELEASE PIPELINE.md  14 roadmap.md  (+35 more)
(+383 files in other folders)
