[package]
name = "tauri-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "^1.0", features = ["api-all"] }

[build]
rustflags = ["-C", "link-arg=-s"]

[package.metadata.tauri]
bundle = { 
    identifier = "com.example.tauri-app", 
    name = "Tauri App", 
    version = "0.1.0", 
    description = "A Tauri application for the Video Orchestrator project." 
}